# bitlbee-omegle

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
sources/: Makefile.am  omegle.c  omegle_http.c  omegle_normal.c  omegle_spy.c
